--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -24,13 +24,16 @@
             android:gravity="center">
 
             <Button
+
                 android:id="@+id/btn1"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_margin="3dp"
+                android:contentDescription=" "
                 android:textSize="40sp" />
 
             <Button
+                android:contentDescription=" "
                 android:id="@+id/btn2"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
@@ -39,6 +42,7 @@
 
             <Button
                 android:id="@+id/btn3"
+                android:contentDescription=" "
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_margin="3dp"
@@ -51,6 +55,7 @@
             android:gravity="center">
 
             <Button
+                android:contentDescription=" "
                 android:id="@+id/btn4"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
@@ -58,6 +63,7 @@
                 android:textSize="40sp" />
 
             <Button
+                android:contentDescription=" "
                 android:id="@+id/btn5"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
@@ -65,6 +71,7 @@
                 android:textSize="40sp" />
 
             <Button
+                android:contentDescription=" "
                 android:id="@+id/btn6"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
@@ -78,6 +85,7 @@
             android:gravity="center">
 
             <Button
+                android:contentDescription=" "
                 android:id="@+id/btn7"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
@@ -85,6 +93,7 @@
                 android:textSize="40sp" />
 
             <Button
+                android:contentDescription=" "
                 android:id="@+id/btn8"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
@@ -92,6 +101,7 @@
                 android:textSize="40sp" />
 
             <Button
+                android:contentDescription=" "
                 android:id="@+id/btn9"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
@@ -105,6 +115,7 @@
             android:gravity="center">
 
             <Button
+
                 android:id="@+id/restart_btn"
                 android:layout_marginTop="15dp"
                 android:layout_width="100dp"
@@ -112,3 +123,4 @@
                 android:text="restart" />
         </TableRow>
     </TableLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
