--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,26 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:layout_weight="3"
+   android:gravity="center"
+    android:background="@drawable/bg"
     android:layout_height="match_parent"
     tools:context=".splash">
 
-    <TextView
-        android:layout_weight="1"
-        android:text="Tic Tac Toe"
-        android:gravity="bottom|center"
-        android:textSize="45sp"
-        android:fontFamily="cursive"
-        android:layout_width="match_parent"
 
-        android:layout_height="0dp">
-
-    </TextView>
     <ImageView
+
         android:id="@+id/imageview"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2"
+        android:transitionName="main_logo"
+        android:layout_width="400dp"
+        android:layout_height="200dp"
+        android:src="@drawable/logof"
+
         />
 
 </LinearLayout>
