--- a/app/src/main/res/layout/activity_online.xml
+++ b/app/src/main/res/layout/activity_online.xml
@@ -154,81 +154,79 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
+        android:weightSum="3"
         android:layout_height="30dp"
-        android:layout_margin="16dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="5dp"
         android:gravity="center"
 
         app:layout_constraintBottom_toTopOf="@+id/tableLayout"
-        app:layout_constraintEnd_toEndOf="@+id/imageView2"
-        app:layout_constraintStart_toStartOf="@+id/imageView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2">
 
+        <TextView
+
+            android:id="@+id/player1"
+            android:layout_width="0dp"
+            android:layout_height="30dp"
+            android:layout_weight="1"
+            android:text="Player1 "
+            android:gravity="right"
+            android:textColor="#FF5757"
+            android:textSize="24dp" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:weightSum="3"
             android:orientation="horizontal">
-
-            <TextView
-
-                android:id="@+id/player1"
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:fontFamily="sans-serif-thin"
-                android:text="Player1 "
-                android:textColor="#000000"
-                android:textSize="24dp" />
-
 
             <TextView
 
                 android:id="@+id/score1"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="30dp"
-                android:fontFamily="sans-serif-thin"
+                android:gravity="center"
+                android:text=" 0 "
+                android:textColor="#000000"
+                android:textSize="24dp" />
+            <TextView
+
+
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="30dp"
+                android:gravity="center"
+                android:text=" - "
+                android:textColor="#000000"
+                android:textSize="24dp" />
+
+            <TextView
+
+                android:id="@+id/score2"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="30dp"
+                android:gravity="center"
                 android:text=" 0 "
                 android:textColor="#000000"
                 android:textSize="24dp" />
         </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-
-
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:fontFamily="sans-serif-thin"
-                android:text=" - "
-                android:textColor="#000000"
-                android:textSize="24dp" />
-            <TextView
-
-                android:id="@+id/score2"
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:fontFamily="sans-serif-thin"
-                android:text=" 0 "
-                android:textColor="#000000"
-                android:textSize="24dp" />
 
             <TextView
 
                 android:id="@+id/player2"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="30dp"
-                android:fontFamily="sans-serif-thin"
+
                 android:text=" Player2 "
-                android:textColor="#000000"
+                android:textColor="#77000000"
                 android:textSize="24dp" />
-
-
-
-
-        </LinearLayout>
 
 
     </LinearLayout>
