--- a/app/src/main/res/layout/join_dialogue.xml
+++ b/app/src/main/res/layout/join_dialogue.xml
@@ -54,7 +54,7 @@
                     android:layout_margin="15dp"
                     android:layout_width="0dp"
                     android:layout_weight="1"
-                    android:text="start"
+                    android:text="join"
                     android:textColor="@color/white"
                     android:background="@drawable/button_bg2"
                     android:layout_height="wrap_content">
